fix lets talk section on safari

--- a/src/assets/sass/components/_homeContact.scss
+++ b/src/assets/sass/components/_homeContact.scss
@@ -1,32 +1,25 @@
 .homeContact {
-    padding-bottom: 9rem;
 
     .grid {
 
-        .divider {
+        .textBox {
             grid-column: 2 / span 12;
-            width: 100%;
-            height: 2px;
-            background-color: $gray30;
-            margin-bottom: 10rem;
-        }
-
-        p {
-            grid-column: 2 / span 10;
-            font-size: 14vw;
-
-            .serif {
-                font-size: 0.9em;
-            }
-        }
-
-        .btnContainer {
-            grid-column: 12 / span 2;
-            height: 100%;
             display: flex;
-            flex-direction: column;
-            align-items: flex-end;
-            justify-content: center;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+            padding-top: 10rem;
+            padding-bottom: 9rem;
+            border-top: 2px solid $gray30;
+
+            p {
+                font-size: 13.5vw;
+    
+                .serif {
+                    font-size: 0.9em;
+                }
+            }
+    
             a { margin-bottom: 1.5vw; }
         }
     }
@@ -34,10 +27,12 @@
 
 
     //1920 Max Breakpoint
-    @media screen and (min-width: 1921px) {
+    @media screen and (min-width: 1920px) {
         .grid {
-            p { font-size: 16.5rem; }
-            .btnContainer a { margin-bottom: 1rem; }
+            .textBox {
+                p { font-size: 16.5rem; }
+                a { margin-bottom: 1rem; }
+            }
         }
     }
 
@@ -65,22 +60,25 @@
 
     //960 Breakpoint
     @media screen and (max-width: 960px) {
-        padding-bottom: 8rem;
 
         .grid {
 
-            .divider {margin-bottom: 8rem;}
-
-            p {
+            .textBox {
                 width: 100%;
-                font-size: 17vw;
-                text-align: center;
-            }
-
-            .btnContainer {
-                width: 100%;
+                display: flex;
+                flex-direction: column;
                 align-items: center;
-
+                justify-content: flex-start;
+                padding-top: 8rem;
+                padding-bottom: 8rem;
+                border-top: 2px solid $gray30;
+    
+                p {
+                    width: 100%;
+                    font-size: 17vw;
+                    text-align: center;
+                }
+        
                 a {
                     margin-top: 1rem; 
                     margin-bottom: 0;
@@ -93,14 +91,27 @@
 
     //640 Breakpoint
     @media screen and (max-width: 640px) {
-        padding-bottom: 6rem;
 
         .grid {
-            .divider {margin-bottom: 5.5rem;}
-
-            p {
+            .textBox {
                 width: 100%;
-                font-size: 30vw;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: flex-start;
+                padding-top: 6rem;
+                padding-bottom: 6rem;
+                border-top: 2px solid $gray30;
+    
+                p {
+                    width: 100%;
+                    font-size: 30vw;
+                }
+        
+                a {
+                    margin-top: 1rem; 
+                    margin-bottom: 0;
+                }
             }
         }
     }
