--- a/src/assets/sass/components/_homeHeadline.scss
+++ b/src/assets/sass/components/_homeHeadline.scss
@@ -6,7 +6,7 @@
 
         h1 {
             grid-column: 2 / span 12;
-            font-size: 6.7vw;
+            font-size: 6.6vw;
             line-height: 110%;
         }
     }
