--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -57,3 +57,5 @@
     height: 100vh;
     background-color: transparent;
 }
+
+html { -webkit-text-size-adjust:none; }
